<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout

        xmlns:tools="http://schemas.android.com/tools"

        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.andrew.opendayapp.MainActivity"
        android:weightSum="1">

        <ImageButton
            android:layout_marginTop="15dp"
            android:layout_width="355dp"
            android:layout_height="110dp"
            android:id="@+id/academic"
            android:contentDescription="@string/academic"
            android:src="@mipmap/welcomebutton"
            />
        <ImageButton
            android:layout_marginTop="15dp"
            android:layout_width="355dp"
            android:layout_height="110dp"
            android:id="@+id/accomoodation"
            android:contentDescription="@string/accomodation"
            android:src="@mipmap/welcomebutton"
            />
        <ImageButton
            android:layout_marginTop="15dp"
            android:layout_width="355dp"
            android:layout_height="110dp"
            android:id="@+id/admissions"
            android:contentDescription="@string/admissions"
            android:src="@mipmap/welcomebutton"
            />
        <ImageButton
            android:layout_marginTop="15dp"
            android:layout_width="355dp"
            android:layout_height="110dp"
            android:id="@+id/careers"
            android:contentDescription="@string/careers"
            android:src="@mipmap/welcomebutton"
            />
        <ImageButton
            android:layout_marginTop="15dp"
            android:layout_width="355dp"
            android:layout_height="110dp"
            android:id="@+id/finance"
            android:contentDescription="@string/finance"
            android:src="@mipmap/welcomebutton"
            />
        <ImageButton
            android:layout_marginTop="15dp"
            android:layout_width="355dp"
            android:layout_height="110dp"
            android:id="@+id/support"
            android:contentDescription="@string/support"
            android:src="@mipmap/welcomebutton"
            />
        <ImageButton
            android:layout_marginTop="15dp"
            android:layout_width="355dp"
            android:layout_height="110dp"
            android:id="@+id/studentsunion"
            android:contentDescription="@string/studentsunion"
            android:src="@mipmap/welcomebutton"
            />
        <ImageButton
            android:layout_marginTop="15dp"
            android:layout_width="355dp"
            android:layout_height="110dp"
            android:id="@+id/studyabroad"
            android:contentDescription="@string/studyabroad"
            android:src="@mipmap/welcomebutton"
            />
        <ImageButton
            android:layout_marginTop="15dp"
            android:layout_width="355dp"
            android:layout_height="110dp"
            android:id="@+id/welsh"
            android:contentDescription="@string/welsh"
            android:src="@mipmap/welcomebutton"
            />
        <ImageButton
            android:layout_marginTop="15dp"
            android:layout_width="355dp"
            android:layout_height="110dp"
            android:id="@+id/sports"
            android:contentDescription="@string/sports"
            android:src="@mipmap/welcomebutton"
            />

</LinearLayout>
</ScrollView>