<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/title"
        android:orderInCategory="1"
        android:title="Locations"
        />

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/departmentoption"
            android:orderInCategory="2"
            app:showAsAction="never"
            android:title="@string/departmentoption"/>

        <item
            android:id="@+id/accommodationoption"
            android:orderInCategory="3"
            app:showAsAction="never"
            android:title="@string/accommodationoption"/>


        <item
            android:id="@+id/refreshmentoption"
            android:orderInCategory="3"
            app:showAsAction="never"
            android:title="@string/refreshmentoption"/>

    </group>

</menu>