<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout

        xmlns:tools="http://schemas.android.com/tools"

        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:weightSum="1"
        tools:context="com.example.andrew.opendayapp.WelcomeActivity">

        <TextView
            android:id="@+id/welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:text="@string/welcome"
            android:textColor="#56318e"
            android:textSize="20sp"
            android:textStyle="bold"

            />

        <TextView
            android:id="@+id/message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/welcome"
            android:layout_marginTop="5dp"
            android:text="@string/message"
            android:textColor="#000000"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/message2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/message"
            android:layout_marginTop="5dp"
            android:text="@string/message2"
            android:textColor="#000000"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/message3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/message2"
            android:layout_marginTop="5dp"
            android:text="@string/message3"
            android:textColor="#000000"
            android:textSize="18sp" />


    </LinearLayout>
</ScrollView>