<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent" >


    <LinearLayout

        xmlns:tools="http://schemas.android.com/tools"

        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.andrew.opendayapp.CarActivity"
        android:weightSum="1"
        android:orientation="vertical">

    <!-- Heading by car  -->
    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/carheading"
        android:text="@string/carheading"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="#56318e"
        />

    <!-- Body by car  -->

    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/carbody"
        android:text="@string/carbody"
        android:textColor="#000000"
        android:textSize="20sp"
        android:layout_below="@+id/carheading"
        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:id="@+id/addressheading"
        android:text="@string/addressheading"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="#56318e"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"

        android:layout_below="@+id/carbody"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/campusaddress"
        android:text="@string/campusaddress"
        android:textColor="#000000"
        android:textSize="20sp"
        android:lineSpacingExtra="10dp"
        android:layout_alignBottom="@+id/carbody"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:layout_below="@id/addressheading"/>





</LinearLayout>
</ScrollView>
